--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -2125,6 +2125,13 @@ ul.dropdown-menu li {
   background-attachment: fixed;
 }
 
+.bg-11{
+  background-color: #655E7A;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
 .bg-2 {
   background: url("../images/featue3.jpg");
   background-size: cover;
@@ -3188,14 +3195,149 @@ hr.rectangle-2-left {
   color: black;
 }
 
+
+
 .responsive-image {
   width: 100%; /* 100% 寬度，根據父容器調整 */
   height: auto; /* 自動計算高度，保持比例 */
 }
 
+
+body.modal-open {
+  overflow: hidden;
+}
+
+#overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+#modal {
+  border: 2px;
+  background: #fff;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+#modal button[id="close"],
+#modal input[type="submit"] {
+  background: #655E7A;
+  color: #fff;
+  display: inline-block;
+  font-size: 14px;
+  letter-spacing: 1px;
+  padding: 14px 35px;
+  text-transform: uppercase;
+  border-radius: 0;
+  transition: all 0.2s ease;
+  cursor: pointer;
+
+  border: 0.5px solid #655E7A;
+  font-weight: bold;
+  font-size: 16px;
+  vertical-align: middle;
+  margin-right: 5px;
+}
+
+#modal input[type="text"] {
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+  margin-bottom: 10px;
+}
+
+#modal #submit {
+  background-color: #ecf0f1;
+  color: #333;
+  margin-right: 5px;
+}
+
+#modal #close {
+  background: #655E7A;
+  color: #fff;
+  margin-left: 5px;
+}
+
+#overlayQuestion {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+#qs {
+  border: 2px;
+  background: #fff;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+
+
+#qs .question button{
+  background: #655E7A;
+  color: #fff;
+  display: inline-block;
+  font-size: 14px;
+  letter-spacing: 1px;
+  padding: 14px 35px;
+  text-transform: uppercase;
+  border-radius: 0;
+  transition: all 0.2s ease;
+  cursor: pointer;
+
+  border: 0.5px solid #655E7A;
+  font-weight: bold;
+  font-size: 16px;
+  vertical-align: middle;
+  margin-right: 5px;
+}
+
+#overlayQuestion #qs .question button.correct {
+  background-color: #eedccd; /* 正確答案的顏色 */
+}
+
+#overlayQuestion #qs .question button.incorrect {
+  background-color: #837f7e; /* 不正確答案的顏色 */
+}
+
+
+
+
+#map .block{
+  width: 500px; /* 地圖的寬度 */
+  height: 450px; /* 地圖的高度 */
+  border: 0;
+  margin-left: auto; /* 左邊距設為自動，使地圖靠右 */
+  display: block;
+
+}
+
+#maptxt .block{
+  width: 100%; /* 設定父容器寬度為 100% */
+  text-align: right; /* 將內容置於右側 */
+
+}
+
+
+
 @media screen and (max-width: 600px) {
   .responsive-image {
-    width: 100%; /* 100% 寬度，根據父容器調整 */
+    width: 50%; /* 100% 寬度，根據父容器調整 */
     height: auto; /* 自動計算高度，保持比例 */
   }
 }
@@ -3215,3 +3357,16 @@ hr.rectangle-2-left {
   }
 }
 
+@media (max-width: 1000px) {
+  #maptop {
+      flex-direction: column-reverse; /* 將 row 的方向改為垂直並反轉順序 */
+  }
+
+  #maptxt {
+      margin-bottom: 20px; /* 添加底部間距，以防止內容太過擁擠 */
+  }
+
+  #map {
+      margin-bottom: 20px; /* 添加底部間距，以防止內容太過擁擠 */
+  }
+}
