--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -3225,6 +3225,9 @@ body.modal-open {
   background: #fff;
   padding: 20px;
   border-radius: 5px;
+  display: flex;
+  flex-direction: column; /* 垂直方向的彈性布局 */
+  align-items: center; 
 }
 
 #modal button[id="close"],
@@ -3245,6 +3248,7 @@ body.modal-open {
   font-size: 16px;
   vertical-align: middle;
   margin-right: 5px;
+
 }
 
 #modal input[type="text"] {
@@ -3284,6 +3288,9 @@ body.modal-open {
   background: #fff;
   padding: 20px;
   border-radius: 5px;
+  display: flex;
+  flex-direction: column; /* 垂直方向的彈性布局 */
+  align-items: center; 
 }
 
 
@@ -3305,6 +3312,14 @@ body.modal-open {
   font-size: 16px;
   vertical-align: middle;
   margin-right: 5px;
+}
+
+@media only screen and (max-width: 600px) {
+  #qs .question button {
+    display: block;
+    width: 100%;
+    margin-bottom: 10px; /* 設置按鈕之間的間距 */
+  }
 }
 
 #overlayQuestion #qs .question button.correct {
